--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -21,7 +21,12 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: mvn -B package --file pom.xml
+    - name: Get the version
+      id: get_version
+      run: echo ::set-output name=VERSION::${GITHUB_REF#refs/tags/}
     - name: Build Docker image
-      run: docker build --tag kappsegla/test:${{github.ref}} .
+      run: docker build --tag kappsegla/test:${{VERSION}} .
     - name: Push Docker image
-      run: docker login -u ${{github.DOCKER_NAME}} -p ${{github.DOCKER_TOKEN}};docker push kappsegla/test:${{github.ref}}
+      run: |
+        docker login -u ${{github.DOCKER_NAME}} -p ${{github.DOCKER_TOKEN}}
+        docker push kappsegla/test:${{VERSION}}
