--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -25,8 +25,8 @@ jobs:
       id: get_version
       run: echo ::set-output name=VERSION::${GITHUB_REF#refs/tags/}
     - name: Build Docker image
-      run: docker build --tag kappsegla/test:${{VERSION}} .
+      run: docker build --tag kappsegla/test:${{ steps.get_version.outputs.VERSION }} .
     - name: Push Docker image
       run: |
         docker login -u ${{github.DOCKER_NAME}} -p ${{github.DOCKER_TOKEN}}
-        docker push kappsegla/test:${{VERSION}}
+        docker push kappsegla/test:${{ steps.get_version.outputs.VERSION }}
