--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -23,10 +23,10 @@ jobs:
       run: mvn -B package --file pom.xml
     - name: Get the version
       id: get_version
-      run: echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\//}
+      run: echo ::set-output name=tag::${GITHUB_REF/refs\/tags\//}
     - name: Build Docker image
-      run: docker build --tag kappsegla/test:${{ steps.get_version.outputs.VERSION }} .
+      run: docker build --tag kappsegla/test:${{ steps.get_version.outputs.tag }} .
     - name: Push Docker image
       run: |
         docker login -u ${{github.DOCKER_NAME}} -p ${{github.DOCKER_TOKEN}}
-        docker push kappsegla/test:${{ steps.get_version.outputs.VERSION }}
+        docker push kappsegla/test:${{ steps.get_version.outputs.tag }}
