--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,7 @@
                 <artifactId>maven-jar-plugin</artifactId>
                 <version>3.2.0</version>
                 <configuration>
+                    <finalName>app</finalName>
                     <archive>
                         <manifest>
                             <addClasspath>true</addClasspath>
