--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -24,7 +24,12 @@ jobs:
     - uses: olegtarasov/get-tag@v2.1.1
     - name: Build Docker image
       run: docker build --tag kappsegla/test:$GIT_TAG_NAME .
+    - name: Login to Docker Hub
+      uses: docker/login-action@v1.12
+      with:
+        username: ${{ secrets.DOCKER_NAME }}
+        password: ${{ secrets.DOCKER_TOKEN }}
     - name: Push Docker image
-      run: |
-        docker login -u ${{github.DOCKER_NAME}} -p ${{github.DOCKER_TOKEN}}
-        docker push kappsegla/test:$GIT_TAG_NAME
+      run: docker push kappsegla/test:$GIT_TAG_NAME
+    - name: Post Login to Docker Hub
+      run: docker logout
